<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.wjb</groupId>
  <artifactId>one</artifactId>
  <version>${com.wjb.one.version}</version>
  <packaging>pom</packaging>
  <name>one</name>
  
  <properties>
  	<project.build.finalName>one</project.build.finalName>
  	<com.wjb.one.version>1.0.0-SNAPSHOT</com.wjb.one.version>
  	
  	<org.springframework.version>4.2.5.RELEASE</org.springframework.version>
  	
  	<deploy.home>${env.TOMCAT_HOME}/webapps</deploy.home>
  </properties>
  
  <dependencyManagement>
  	<dependencies>
  <!-- Spring Framework Configuration -->
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-core</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-beans</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-context</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-context-support</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-expression</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency> 	  
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-web</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
  <!-- Spring Framework Configuration End. -->
  
  <!-- Spring Framework aop -->
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-aop</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-aspects</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>  
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-instrument</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>  
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-instrument-tomcat</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>  
  <!-- Spring Framework aop End. -->  
  
  <!-- Spring Framework messaging -->
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-messaging</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
  <!-- Spring Framework messaging End. -->  
  
    <!-- Spring Framework jpa -->
  	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-jdbc</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-tx</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-orm</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-oxm</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-jms</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
 	  <dependency>
		<groupId>org.springframework.data</groupId>
		<artifactId>spring-data-jpa</artifactId>
		<version>1.10.2.RELEASE</version>
	  </dependency>
	  <!-- datasource -->
  	  <dependency>
		<groupId>commons-dbcp</groupId>
		<artifactId>commons-dbcp</artifactId>
		<version>1.4</version>
	  </dependency>
	  <dependency>
		<groupId>commons-pool</groupId>
		<artifactId>commons-pool</artifactId>
		<version>1.5.4</version>
	  </dependency>	

	  <!-- mysql deriver -->
	  <dependency>
	    <groupId>mysql</groupId>
	    <artifactId>mysql-connector-java</artifactId>
	    <version>8.0.12</version>
	  </dependency>	  
	  <!-- oracle deriver -->
 	  <dependency>
		<groupId>com.oracle</groupId>
		<artifactId>ojdbc7</artifactId>
		<version>12.1.0.1</version>
	  </dependency>
  <!-- Spring Framework jpa End. -->
  
  <!-- Spring Framework mvc -->
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-webmvc</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-websocket</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-webmvc-portlet</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
  <!-- Spring Framework mvc End. -->
  
  <!-- Spring Framework test -->
  	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-test</artifactId>
		<version>${org.springframework.version}</version>
	  </dependency>
  <!-- Spring Framework test End. -->
  
    
  <!-- One Util -->
   	  <dependency>
		<groupId>com.wjb</groupId>
		<artifactId>one-util</artifactId>
		<version>${com.wjb.one.version}</version>
	  </dependency>    	
  	</dependencies>
  </dependencyManagement>
  <dependencies>
    <!-- Junit 4 -->
   	<dependency>
		<groupId>junit</groupId>
		<artifactId>junit</artifactId>
		<version>4.12</version>
		<scope>test</scope>
	</dependency>
 	<!-- Logging dependency -->
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-api</artifactId>
		<version>1.7.7</version>
	</dependency>
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-nop</artifactId>
		<version>1.7.7</version>
	</dependency>
	<dependency>
		<groupId>ch.qos.logback</groupId>
		<artifactId>logback-core</artifactId>
		<version>1.1.2</version>
	</dependency>
	<dependency>
		<groupId>ch.qos.logback</groupId>
		<artifactId>logback-classic</artifactId>
		<version>1.1.2</version>
	</dependency>
	 <!-- Logging dependency End.. -->
	 
	 <!-- spring core compornent -->
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-core</artifactId>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-beans</artifactId>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-context</artifactId>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-context-support</artifactId>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-expression</artifactId>
	  </dependency>
	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-web</artifactId>
	  </dependency>	 
	 <!-- spring core compornent end.-->
	 
	<!-- Spring Framework test -->
  	  <dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-test</artifactId>
	  </dependency>
  	<!-- Spring Framework test End. -->
	
  </dependencies>
  
  
  <build>
	<resources>
		<resource>
			<directory>src/main/resources</directory>
			<filtering>true</filtering>
			<excludes>
				<exclude>mapper/**</exclude>
			</excludes>
		</resource>
		<resource>
			<directory>src/main/resources/mapper</directory>
			<filtering>false</filtering>
			<targetPath>${project.build.outputDirectory}/mapper</targetPath>
			<includes>
				<include>**/*.xml</include>
			</includes>
		</resource>
		<resource>
			<directory>src/main/webapp</directory>
			<filtering>false</filtering>
			<excludes>
				<exclude>**</exclude>
			</excludes>
		</resource>
	</resources>
	<testResources>
		<testResource>
			<directory>src/test/resources</directory>
			<filtering>true</filtering>
		</testResource>
	</testResources>
  	<pluginManagement>
  		<plugins>
  			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.7</version>
			</plugin>			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.6</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.8</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.5</version>
			</plugin>									  		
  		</plugins>
  	</pluginManagement>
  	
  	<plugins>
		<plugin>
			<artifactId>maven-compiler-plugin</artifactId>
			<configuration>
				<source>1.8</source>
				<target>1.8</target>
				<compilerVersion>1.8</compilerVersion>
			</configuration>
		</plugin>
		<plugin>
			<artifactId>maven-resources-plugin</artifactId>
			<configuration>
				<encoding>UTF-8</encoding>
			</configuration>
			<dependencies>
                   <dependency>
                       <groupId>org.apache.maven.shared</groupId>
                       <artifactId>maven-filtering</artifactId>
                       <version>1.3</version>
                   </dependency>
            </dependencies>
		</plugin>
		<plugin>
			<artifactId>maven-surefire-plugin</artifactId>
			<configuration>
				<argLine>-Xmx=512m -XX:MaxPermSize=256m</argLine>
				<forkMode>once</forkMode>
				<argLine>-enableassertions</argLine>
				<testFailureIgnore>true</testFailureIgnore>
				<parallel>methods</parallel>
				<threadCount>1</threadCount>
			</configuration>
		</plugin>  	
  	</plugins>
  </build>
  
  <profiles>
  	<profile>
  		<id>dev</id>
  		<activation>
  			<property>
  				<name>dev</name>
  			</property>
  		</activation>
  		
  		<properties>
  			<!-- database dev -->
  			<database.master.driverClassName>oracle.jdbc.driver.OracleDriver</database.master.driverClassName>
  			<database.master.url>jdbc:oracle:thin:@10.1.15.55:1523/SMXT</database.master.url>
  			<database.master.dialect>org.hibernate.dialect.Oracle10gDialect</database.master.dialect>
  			<database.master.user>smartrix_dev</database.master.user>
  			<database.master.passsword>smartrix_1234</database.master.passsword>
  			
  			<!-- database test -->
  			<database.secondby.driverClassName>oracle.jdbc.driver.OracleDriver</database.secondby.driverClassName>
  			<database.secondby.url>jdbc:oracle:thin:@10.1.15.55:1523/SMXT</database.secondby.url>
  			<database.secondby.dialect>org.hibernate.dialect.Oracle10gDialect</database.secondby.dialect>
  			<database.secondby.user>smartrix_test</database.secondby.user>
  			<database.secondby.passsword>smartrix_1234</database.secondby.passsword>
  			
  			<!-- other parameter -->
  			<!-- fj position prod set absolute path-->
  			<files.root>${project.basedir}/files</files.root>
  			
  		</properties>
  	</profile>
  </profiles>
  
  <modules>
  	<module>one-mybatis</module>
  	<module>one-util</module>
  </modules>
</project>